# HetuCTR

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindZMQ.cmake
csrc/: CMakeLists.txt
csrc/core/: all2all.cu  debug.cu  gen_query.cu  generate_query.cu  gradient.cu  handle_query.cu  hetu_gpu_table.cc  hetu_gpu_table.cu  hetu_gpu_table.h  init_func.cu  preprocess.cc  preprocess.cu  preprocess.h  preprocess_struct.h  preprocess_sturct.cu  query.cu  table_initialize.cu  types.h  writeback.cu
csrc/hash_table/: nv_hashtable.cu  nv_hashtable.hpp
csrc/partition/: CMakeLists.txt  partition.cc  partition.h  pybind.cc
csrc/pybind/: pybind.cc  pybind.cu
csrc/rendezvous/: rendezvous.cc  rendezvous.h
csrc/utils/: initializer.cu  initializer.h  partition.cc  partition.h  rendezvous.cc  rendezvous.h  thread_pool.cc
experimental/: cuda.py  data_partition.py  direct_partition.py  gen_parts.py  partition.py  run_parts.py  some_data.py  sort.py
tests/: CMakeLists.txt  all2all.cu  benchmark.py  benchmark.sh  check.py  data_partition.py  driver.py  init.cu  run.sh  test_cub.cu  test_update.py
